examples/alternative-credentials-location.yaml
apiVersion: config.authorino.3scale.net/v1beta1
kind: Service
metadata:
  name: talker-api-protection
spec:
  hosts:
    - talker-api
  identity:
    - name: friends-using-header
      apiKey:
        labelSelectors:
          authorino.3scale.net/managed-by: authorino
          group: friends
      credentials:
        in: authorization_header
        keySelector: APIKEY
    - name: friends-using-query-string-param
      apiKey:
        labelSelectors:
          authorino.3scale.net/managed-by: authorino
          group: friends
      credentials:
        in: query
        keySelector: api_key
---
apiVersion: v1
kind: Secret
metadata:
  name: friend-1-api-key-1
  labels:
    authorino.3scale.net/managed-by: authorino
    group: friends
stringData:
  api_key: ndyBzreUzF4zqDQsqSPMHkRhriEOtcRx
type: Opaque
