examples/dex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dex
  name: dex
spec:
  selector:
    matchLabels:
      app: dex
  replicas: 1
  template:
    metadata:
      labels:
        app: dex
    spec:
      containers:
      - image: quay.io/dexidp/dex:v2.26.0
        name: dex
        command: ["/usr/local/bin/dex", "serve", "/etc/dex/cfg/config.yaml"]

        ports:
        - name: https
          containerPort: 5556

        volumeMounts:
        - name: config
          mountPath: /etc/dex/cfg
        - name: db
          mountPath: /etc/dex/db

      volumes:
      - name: config
        configMap:
          name: dex
          items:
          - key: config.yaml
            path: config.yaml
      - name: db
        emptyDir: {} # obviously not good for production
---
kind: ConfigMap
apiVersion: v1
metadata:
  name: dex
data:
  config.yaml: |
    issuer: http://dex:5556
    storage:
      type: sqlite3
      config:
        file: /etc/dex/db/dex.db
    web:
      http: 0.0.0.0:5556
    oauth2:
      skipApprovalScreen: false
    logger:
      level: "debug"

    staticClients:
    - id: authorino
      name: 'Authorino'
      redirectUris:
      - http://localhost:3000/callback
      secret: aaf88e0e-d41d-4325-a068-57c4b0d61d8e

    enablePasswordDB: true
    staticPasswords:
    - email: "admin@localhost"
      # bcrypt hash of the string "password"
      hash: "$2a$10$2b2cU8CPhOTaGrs1HRQuAueS7JTT5ZHsHSzYiFPm1leZck7Mc8T4W"
      username: "admin"
      userID: "08a8684b-db88-4b73-90a9-3cd1661f5466"
---
apiVersion: v1
kind: Service
metadata:
  name: dex
spec:
  ports:
  - name: dex
    port: 5556
    protocol: TCP
  selector:
    app: dex
