examples/echo-api-protection.yaml
apiVersion: config.authorino.3scale.net/v1beta1
kind: Service
metadata:
  name: echo-api
spec:
  hosts:
    - echo-api
  identity:
    - name: keycloak
      oidc:
        endpoint: http://keycloak:8080/auth/realms/ostia
      credentials:
        in: authorization_header
        key_selector: Bearer
  metadata:
    - name: userinfo
      userInfo:
        identitySource: keycloak
    - name: resource-data
      uma:
        identitySource: keycloak
        credentialsRef:
          name: umacredentialssecret
  authorization:
    - name: my-main-policy
      opa:
        inlineRego: |
          http_request = input.context.request.http
          http_method = http_request.method
          requested_path = trim_right(http_request.path, "/")
          identity = input.auth.identity
          resource_data = object.get(input.auth.metadata, "resource-data", [])[0]

          allow {
            http_method == "GET"
            requested_path == "/hello"
          }

          allow {
            http_method == "GET"
            requested_path == "/bye"
            identity_is_admin
          }

          allow {
            path_sections := split(trim_left(requested_path, "/"), "/")
            some greetingid

            http_method == "GET"
            path_sections = ["greetings", greetingid]
            identity_owns_the_resource
          }

          identity_owns_the_resource {
            resource_owner := object.get(object.get(resource_data, "owner", {}), "id", "")
            subject := object.get(identity, "sub", object.get(identity, "username", ""))

            resource_owner == subject
          }

          identity_is_admin {
            identity.realm_access.roles[_] == "admin"
          }
    - name: some-extra-rule
      json:
        rules:
          - selector: "auth.identity.email_verified"
            operator: eq
            value: "true"
          - selector: "context.source.address.Address.SocketAddress.address"
            operator: eq
            value: "127.0.0.1"
