examples/ip-range-allow-list.yaml
apiVersion: config.authorino.3scale.net/v1beta1
kind: Service
metadata:
  name: talker-api-protection
spec:
  hosts:
    - talker-api
  identity:
    - name: friends
      apiKey:
        labelSelectors:
          authorino.3scale.net/managed-by: authorino
          group: friends
      credentials:
        in: authorization_header
        keySelector: APIKEY
  authorization:
    - name: allowed-ip-range
      json:
        rules:
          - selector: context.request.http.headers.x-forwarded-for
            operator: matches
            value: "192\\.168\\.1\\.\\d+"
---
apiVersion: v1
kind: Secret
metadata:
  name: friend-1-api-key-1
  labels:
    authorino.3scale.net/managed-by: authorino
    group: friends
stringData:
  api_key: ndyBzreUzF4zqDQsqSPMHkRhriEOtcRx
type: Opaque
