examples/keycloak-abac.yaml
apiVersion: config.authorino.3scale.net/v1beta1
kind: Service
metadata:
  name: talker-api-protection
spec:
  hosts:
    - talker-api
  identity:
    - name: keycloak
      oidc:
        endpoint: http://keycloak:8080/auth/realms/kuadrant
  metadata:
    - name: user-info
      userInfo:
        identitySource: keycloak
    - name: resource-data
      uma:
        endpoint: http://keycloak:8080/auth/realms/kuadrant
        credentialsRef:
          name: talker-api-uma-credentials
  authorization:
    - name: main-abac-policy
      opa:
        inlineRego: |
          http_request = input.context.request.http
          http_method = http_request.method
          requested_path = trim_right(http_request.path, "/")
          identity = input.auth.identity
          resource_data = object.get(input.auth.metadata, "resource-data", [])[0]

          allow {
            http_method == "GET"
            requested_path == "/hello"
          }

          allow {
            http_method == "GET"
            requested_path == "/goodbye"
            identity_is_admin
          }

          allow {
            path_sections := split(trim_left(requested_path, "/"), "/")
            some greetingid

            http_method == "GET"
            path_sections = ["greetings", greetingid]
            identity_owns_the_resource
          }

          identity_owns_the_resource {
            resource_owner := object.get(object.get(resource_data, "owner", {}), "id", "")
            subject := object.get(identity, "sub", object.get(identity, "username", ""))

            resource_owner == subject
          }

          identity_is_admin {
            identity.realm_access.roles[_] == "admin"
          }
    - name: some-extra-rules
      json:
        rules:
          - selector: "auth.identity.email_verified"
            operator: eq
            value: "true"
          - selector: context.request.http.headers.x-forwarded-for
            operator: matches
            value: "10\\.244\\.0\\.\\d+"
---
apiVersion: v1
kind: Secret
metadata:
  name: talker-api-uma-credentials
stringData:
  clientID: talker-api
  clientSecret: 523b92b6-625d-4e1e-a313-77e7a8ae4e88
type: Opaque
