examples/wristband.yaml
apiVersion: config.authorino.3scale.net/v1beta1
kind: Service
metadata:
  name: talker-api-protection
spec:
  hosts:
    - talker-api
  identity:
    - name: edge
      apiKey:
        labelSelectors:
          authorino.3scale.net/managed-by: authorino
      credentials:
        in: authorization_header
        keySelector: APIKEY
    - name: wristband
      oidc:
        endpoint: http://authorino-authorization:8003/authorino/talker-api-protection
  wristband:
    issuer: http://authorino-authorization:8003/authorino/talker-api-protection
    customClaims:
      - name: aud
        value: internal
      - name: born
        valueFrom:
          authJSON: auth.identity.metadata.creationTimestamp
    tokenDuration: 300
    signingKeyRefs:
      - name: my-signing-key
        algorithm: ES256
      - name: my-old-signing-key
        algorithm: RS256
---
apiVersion: v1
kind: Secret
metadata:
  name: edge-api-key-1
  labels:
    authorino.3scale.net/managed-by: authorino
stringData:
  api_key: ndyBzreUzF4zqDQsqSPMHkRhriEOtcRx
type: Opaque
---
apiVersion: v1
kind: Secret
metadata:
  name: my-signing-key
stringData:
  key.pem: |
    -----BEGIN EC PRIVATE KEY-----
    MHcCAQEEIDHvuf81gVlWGo0hmXGTAnA/HVxGuH8vOc7/8jewcVvqoAoGCCqGSM49
[...]
    cnUvHIu23SgW+Ee9lxSmZGhO4eTdQeKxMA==
    -----END EC PRIVATE KEY-----
type: Opaque
---
apiVersion: v1
kind: Secret
metadata:
  name: my-old-signing-key
stringData:
  key.pem: |
    -----BEGIN RSA PRIVATE KEY-----
    MIIG4gIBAAKCAYEA1FMnOG+YWcQcAOceoWUMCoXOGlIsblTwy0y04rR6aWlfDQ72
[...]
    bdpS9+xMtvYY4CVeQyaA4lCnYuMyuFvsTnKnWkVrFyumceG1cvA=
    -----END RSA PRIVATE KEY-----
type: Opaque
